	  strcasecmp and strncasecmp

2023-04-18  Simon Sobisch <simonsobisch@gnu.org>

	* numeric.c: integrated changes of Chuck Haatveet 2023-03-28 with tuning
	  for even more speed by using best matching types and refactoring
	* common.h: added cob_move_bcd as external function declaration
	* move.c (cob_move): add call to cob_move_bcd for fields without negative
	  scale

2024-03-10  Alfredo Tupone <tupone@gentoo.org>

	* common.c: add missing include libxml/parser.h

2024-01-30  Ron Norman <rjn@inglenet.com>

	* fisam.c: Updated to set index field type for 'short' & 'int'
	  Enabled support for variable length records is using V-ISAM/D-ISAM

2023-06-02  Simon Sobisch <simonsobisch@gnu.org>

	* fsqlxfd.c (cob_findkey_attr), fileio.c, fisam.c: extracted identical
	  logic from cob_findkey, indexed_findkey and db_findkey;
	  dropping the later two and set mapkey after calling it
	* Makefile.am: link fsqlxfd into all libraries (may be adjusted later)
	* fileio.c (cob_file_create), common.h: prefer relevant enums over int
	* fileio.c (cob_file_sort_using, cob_file_sort_giving): raise
	  COB_EC_SORT_MERGE_FILE_OPEN when applicable
	* fileio.c (cob_copy_check, cob_file_sort_submit, cob_file_sort_retrieve):
	  pass most matching argument type instead of the structures containing it
	* fileio.c (cobsort): new attribute flag_merge
	* fileio.c (cob_file_sort_options), common.h: new function to pass more
	  options, so far only used to set flag_merge

2023-04-13  Simon Sobisch <simonsobisch@gnu.org>

	performance adjustments for HEX-OF and HEX-TO-CHAR
	* intrinsic.c (test_digit, cob_intr_hex_to_char, cob_intr_locale_date,
	  cob_intr_locale_time), move.c (cob_move_alphanum_to_display,
	  cob_get_s64_pic9): prefer range check over isdigit for improved speed
	* numeric.c (cob_decimal_get_packed): use COB_D2I instead of subtracting
	* intrinsic.c (cob_intr_hex_to_char): minor refactoring for speedup
	* intrinsic.c (cob_intr_hex_of): rewritten to use hex value table instead