@@ -1138,12 +1138,11 @@ static int
 cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 {
 	char	buff[COB_MAX_BINARY * 2];
-	register unsigned char	*p, *q;
+	register unsigned char	*p;
 	unsigned char	*data;
-	size_t	size;
-	int 	i, diff, last;
 	const int		sign = mpz_sgn (d->value);
-	int		digits;
+	unsigned int	size, diff;
+	unsigned short		digits;
 
 	/* check for value zero (allows early exit) and handle sign */
 	if (sign == 0) {
@@ -1172,18 +1171,31 @@ cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 		}
 		/* Other size, truncate digits, using the remainder */
 		mpz_tdiv_r (cob_mexp, d->value, cob_mexp);
+		/* integer setting, if possible */
+		if (mpz_fits_sint_p (cob_mexp)) {
+			const signed int val = mpz_get_si (cob_mexp) * sign;
+			cob_set_packed_int (f, val);
+			return 0;
+		}
+		/* get truncated digits as string */
 		(void) mpz_get_str (buff, 10, cob_mexp);
 		size = digits;
 		diff = 0;
 		/* note: truncation may lead to 100012 be changed to 00012
 		         in which case mpz_get_str provides us with 12 */
 	} else {
-		/* No overflow, so get string data and fill with zero */
+		/* integer setting, if possible */
+		if (mpz_fits_sint_p (d->value)) {
+			const signed int val = mpz_get_si (d->value) * sign;
+			cob_set_packed_int (f, val);
+			return 0;
+		}
+
+		/* No overflow, so get string data as-is */
 		(void) mpz_get_str (buff, 10, d->value);
 		size = strlen (buff);
 		diff = (int)(digits - size);
 	}
-	q = (unsigned char *)buff;
 
 	/* Store number */
 	data = f->data;
@@ -1195,12 +1207,17 @@ cob_decimal_get_packed (cob_decimal *d, cob_field *f, const int opt)
 		p = data + (digits / 2) - (size / 2);
 		diff = 1 - (int)(size % 2);
 	}
-	last = (int)(size + diff);
-	for (i = diff; i < last; i++) {
-		if (i % 2 == 0) {
-			*p = (unsigned char) (COB_D2I (*q++) << 4);
-		} else {
-			*p++ |= COB_D2I (*q++);
+	size += diff;
+	/* set data starting from first half-byte with data until end */
+	{
+		register unsigned char *q = (unsigned char *)buff;
+		register unsigned int	i = diff;
+		while (i < size) {
+			if ((i++ & 1) == 0) {	/* -> i % 2 == 0 */
+				*p = (unsigned char) (*q++ << 4);	/* -> dropping the higher bits = no use in COB_D2I */
+			} else {
+				*p++ += COB_D2I (*q++);
+			}
 		}
 	}
 
@@ -2231,6 +2248,11 @@ cob_div_remainder (cob_field *fld_remainder, const int opt)
 	(void)cob_decimal_get_field (&cob_d_remainder, fld_remainder, opt);
 }
 
+/* internal MOVE handling by converting 'src' to cob_decimal,
+   then converting that back to 'dst'
+   with optional truncation as specified in 'opt';
+   while this is quite expensive it converts between every numeric data type
+   with every attribute possible */
 void
 cob_decimal_setget_fld (cob_field *src, cob_field *dst, const int opt)
 {
@@ -2325,16 +2347,13 @@ cob_shift_right_nibble (unsigned char *ptr_buff, unsigned char *ptr_start_data_b
 	shift_cntr = len1;
 	move_nibble = 0xFF;
 
-	/* point at the last byte in buffer as we will shift from right to left !! */
+	/* note that since we are shifting from left to right we have to start in the
+	   first 64 bit area containing the high order 64 bit integer which contains
+	   the starting position of the data to be shifted */
 	ptr_long = (cob_u64_t *)(ptr_buff + 48);
-
-	/* note that ptr_long is pointing at the position after the end of the buffer,
-	   so since we are shifting from left to right we need to back up to the first
-	   64 bit area containing the high order 64 bit integer which contains the
-	   starting position of the data to be shifted */
 	do {
 		ptr_long--;
-	} while ((unsigned char *)ptr_long > ptr_start_data_byte);
+	} while (ptr_long > (cob_u64_t *)ptr_start_data_byte);	/* we want to be there - or before! */
 
 	do {
 # ifdef WORDS_BIGENDIAN
