@@ -61,6 +61,14 @@
 	* common.h: added cob_move_bcd as external function declaration
 	* move.c (cob_move): add call to cob_move_bcd for fields without negative
 	  scale
+	* common.c (cob_is_numeric, cob_is_alpha, cob_is_upper, cob_is_lower,
+	  cob_check_numeric, cob_check_numdisp, cob_correct_numeric):
+	  prefer pointer arithmetic to arrays
+	* common.c (cob_is_numeric, cob_check_numdisp, cob_set_date_from_epoch,
+	  set_config_val, translate_boolean_to_int): prefer range check over
+	  isdigit and COB_D2I over atoi
+	* numeric.c (cob_decimal_get_packed): set by optimized integer routine
+	  when possible
 
 2024-03-10  Alfredo Tupone <tupone@gentoo.org>
 
